--- a/package.json
+++ b/package.json
@@ -10,19 +10,22 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "@react-navigation/native": "6.1.1",
-    "@react-navigation/stack": "6.3.10",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/native": "6.1.2",
+    "@react-navigation/stack": "6.3.11",
     "@reduxjs/toolkit": "1.9.1",
     "@types/lodash": "4.14.191",
     "axios": "1.2.1",
+    "jest-mock-axios": "^4.7.0-beta4",
     "lodash": "4.17.21",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-config": "1.4.11",
-    "react-native-gesture-handler": "2.8.0",
+    "react-native-gesture-handler": "2.9.0",
+    "react-native-reanimated": "2.14.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.2",
-    "react-native-svg": "13.6.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "1.0.0",
     "react-redux": "8.0.5"
   },
@@ -30,6 +33,8 @@
     "@babel/core": "7.12.9",
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "2.0.0",
+    "@testing-library/jest-native": "5.4.1",
+    "@testing-library/react-native": "11.5.0",
     "@tsconfig/react-native": "2.0.2",
     "@types/jest": "26.0.23",
     "@types/react": "18.0.21",
@@ -40,12 +45,28 @@
     "babel-jest": "26.6.3",
     "eslint": "7.32.0",
     "jest": "26.6.3",
+    "jest-fetch-mock": "^3.0.3",
     "metro-react-native-babel-preset": "0.72.3",
-    "react-test-renderer": "18.1.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "4.8.3"
   },
   "jest": {
     "preset": "react-native",
+    "testEnvironment": "jsdom",
+    "automock": false,
+    "moduleNameMapper": {
+      "\\.svg": "<rootDir>/__mocks__/svgMock.js"
+    },
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|axios|@react-navigation|react-native-config)/)"
+    ],
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js",
+      "./setupJest.js"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
