--- a/tsconfig.json
+++ b/tsconfig.json
@@ -59,7 +59,7 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "include": ["src/components", "custom.d.ts"],
+  "include": ["src/components", "declaration.d.ts"],
   "exclude": [
     "node_modules",
     "babel.config.js",
